--- a/src/assets/less/dark.less
+++ b/src/assets/less/dark.less
@@ -8,8 +8,8 @@
 @media only screen and (min-width: 0rem) {
     // Dark Mode Color Scheme
     :root {
-        --dark: #082032;
-        --medium: #2c394b;
+        --dark: #212426;
+        --medium: #41474a;
         --accent: #334756;
     }
 
