--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -9,9 +9,9 @@
             <a aria-label="go back to home" class="cs-logo" href="">
                 <img class="cs-logo-img" aria-hidden="" loading="lazy" decoding="async" src="/assets/images/BookStreet_Logo2.png" alt="logo" width="240" height="32">
             </a>
-            <p class="cs-text-2">
+           <!-- <p class="cs-text-2">
                 Etiam nulla ultrices consequat, posuere nulla. Ac iaculis lorem phasellus ultrices adipiscing viverra sit ut quam. In diam mattis elementum diam at sed ultricies.
-            </p>
+            </p> -->
         </div>
         <!-- Links -->
         <ul class="cs-nav">
