--- a/src/assets/less/services.less
+++ b/src/assets/less/services.less
@@ -85,7 +85,7 @@
         transition: background-color 0.3s;
     }
     #why-choose-289 .cs-item:hover {
-        background-color: var(--primary);
+        background-color: var(--tertiary);
         cursor: pointer;
     }
     #why-choose-289 .cs-item:hover .cs-icon {
