--- a/src/assets/css/services.css
+++ b/src/assets/css/services.css
@@ -83,7 +83,7 @@
     transition: background-color 0.3s;
   }
   #why-choose-289 .cs-item:hover {
-    background-color: var(--primary);
+    background-color: var(--tertiary);
     cursor: pointer;
   }
   #why-choose-289 .cs-item:hover .cs-icon {
