--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -351,6 +351,7 @@
             /* 24px - 32px */
             height: clamp(1.5rem, 2vw, 2rem);
             width: auto;
+            filter: invert(94%) sepia(48%) saturate(7347%) hue-rotate(180deg) brightness(113%) contrast(83%);
         }
 
         .cs-number {
@@ -417,7 +418,7 @@
             }
 
             .cs-picture {
-                background-color: var(--accent);
+                background-color: var(--primary);
             }
 
             .cs-item {
