--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -390,12 +390,12 @@
             }
 
             .cs-picture {
-                background-color: var(--accent);
+                background-color: var(--primary);
             }
 
             .cs-icon {
                 /* turns it white */
-                filter: grayscale(1) brightness(1000%);
+                filter: invert(94%) sepia(48%) saturate(7347%) hue-rotate(180deg) brightness(113%) contrast(83%);
             }
 
             .cs-title,
@@ -475,6 +475,7 @@
             height: auto;
             margin-bottom: (32/16rem);
             display: block;
+            filter: invert(39%) sepia(61%) saturate(366%) hue-rotate(160deg) brightness(99%) contrast(91%);
         }
 
         .cs-review {
@@ -541,9 +542,11 @@
             }
 
             .cs-item {
-                background-color: var(--accent);
+                background-color: var(--primary);
             }
-
+            .cs-quote{
+                filter: invert(98%) sepia(4%) saturate(554%) hue-rotate(195deg) brightness(95%) contrast(92%);
+            }
             .cs-review,
             .cs-name {
                 color: var(--bodyTextColorWhite);
