--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -8,13 +8,13 @@
 @media only screen and (min-width: 0rem) {
     // Website colors
     :root {
-        --primary: #457bd9;
+        --primary: #457b9d;
         --primaryLight: #f72e27;
         --secondary: #212426;
         --secondaryLight: #41474a;
         --headerColor: #04090d;
         --bodyTextColor: #41474a;
-        --bodyTextColorWhite: #cfdbd5;
+        --bodyTextColorWhite: #e6e5ea;
         --tertiary: #f72e27;
 
         /* 13px - 16px */
@@ -1168,6 +1168,7 @@
             width: (48/16rem);
             height: auto;
             margin: 0 0 (24/16rem) 0;
+            filter: invert(94%) sepia(48%) saturate(7347%) hue-rotate(180deg) brightness(113%) contrast(83%);
         }
 
         .cs-h3 {
@@ -1297,7 +1298,7 @@
             }
 
             .cs-icon {
-                filter: grayscale(1) brightness(1000%);
+                filter: invert(39%) sepia(61%) saturate(366%) hue-rotate(160deg) brightness(99%) contrast(91%);
             }
 
             .cs-text {
