--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -5,13 +5,13 @@
 /* CodeStitch Root and Helpers */
 @media only screen and (min-width: 0rem) {
   :root {
-    --primary: #457bd9;
+    --primary: #457b9d;
     --primaryLight: #f72e27;
     --secondary: #212426;
     --secondaryLight: #41474a;
     --headerColor: #04090d;
     --bodyTextColor: #41474a;
-    --bodyTextColorWhite: #cfdbd5;
+    --bodyTextColorWhite: #e6e5ea;
     --tertiary: #f72e27;
     /* 13px - 16px */
     --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
@@ -988,6 +988,7 @@
     width: 3rem;
     height: auto;
     margin: 0 0 1.5rem 0;
+    filter: invert(94%) sepia(48%) saturate(7347%) hue-rotate(180deg) brightness(113%) contrast(83%);
   }
   #hero-1619 .cs-h3 {
     /* 20px - 25px */
@@ -1097,7 +1098,7 @@
     color: var(--bodyTextColorWhite);
   }
   body.dark-mode #hero-1619 .cs-icon {
-    filter: grayscale(1) brightness(1000%);
+    filter: invert(39%) sepia(61%) saturate(366%) hue-rotate(160deg) brightness(99%) contrast(91%);
   }
   body.dark-mode #hero-1619 .cs-text {
     opacity: 0.8;
