--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -7,7 +7,7 @@
         <!-- Logo Group -->
         <div class="cs-logo-group">
             <a aria-label="go back to home" class="cs-logo" href="">
-                <img class="cs-logo-img" aria-hidden="" loading="lazy" decoding="async" src="/assets/images/BookStreet_Logo2.png" alt="logo" width="240" height="32">
+                <img class="cs-logo-img" aria-hidden="" loading="lazy" decoding="async" src="/assets/images/BookStreet_Logo.png" alt="logo" width="240" height="32">
             </a>
            <!-- <p class="cs-text-2">
                 Etiam nulla ultrices consequat, posuere nulla. Ac iaculis lorem phasellus ultrices adipiscing viverra sit ut quam. In diam mattis elementum diam at sed ultricies.
@@ -19,19 +19,19 @@
                 <span class="cs-header">Sitemap</span>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Home</a>
+                <a class="cs-nav-link" href="/">Home</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">About</a>
+                <a class="cs-nav-link" href="/about">About</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Services</a>
+                <a class="cs-nav-link" href="/services">Services</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Portfolio</a>
+                <a class="cs-nav-link" href="/portfolio">Portfolio</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Contact</a>
+                <a class="cs-nav-link" href="/contact">Contact</a>
             </li>
         </ul>
         <!-- Contact Info -->
@@ -45,7 +45,7 @@
             <li class="cs-contact-li">
                 <a class="cs-contact-link" href="mailto:info@codestitch.com">bryan@bookstreetdesign.com</a>
             </li>
-            <!-- Social Media -->
+            <!-- Social Media 
             <li class="cs-contact-li cs-social-group">
                 <div class="cs-social">
                     <a class="cs-social-link" aria-label="visit google profile" href="">
@@ -58,7 +58,7 @@
                         <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/instagram.svg" alt="instagram" width="11" height="11">
                     </a>
                 </div>
-            </li>
+            </li>-->
         </ul>
     </div>
 </footer>
