--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -1,65 +1,69 @@
 <!-- ============================================ -->
-<!--                   Footer                     -->
+<!--                  Footer                      -->
 <!-- ============================================ -->
 
-<footer id="cs-footer-269">
+<footer id="footer-1147">
     <div class="cs-container">
-        <!-- Logo Group -->
-        <div class="cs-logo-group">
+        <div class="cs-top">
             <a aria-label="go back to home" class="cs-logo" href="">
-                <img class="cs-logo-img" aria-hidden="" loading="lazy" decoding="async" src="/assets/images/BookStreet_Logo.png" alt="logo" width="240" height="32">
+                <img class="cs-logo-img" loading="lazy" decoding="async" src="/assets/images/lodestar_logo.jpg" alt="logo" width="168" height="48">
             </a>
-           <!-- <p class="cs-text-2">
-                Etiam nulla ultrices consequat, posuere nulla. Ac iaculis lorem phasellus ultrices adipiscing viverra sit ut quam. In diam mattis elementum diam at sed ultricies.
-            </p> -->
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    <a href="/" class="cs-link">Home</a>
+                </li>
+                <li class="cs-li">
+                    <a href="/about" class="cs-link">About</a>
+                </li>
+                <li class="cs-li">
+                    <a href="/services" class="cs-link">Pricing</a>
+                </li>
+                <li class="cs-li">
+                    <a href="/faq" class="cs-link">FAQ</a>
+                </li>
+                <li class="cs-li">
+                    <a href="/contact" class="cs-link">Contact</a>
+                </li>
+            </ul>
         </div>
-        <!-- Links -->
-        <ul class="cs-nav">
-            <li class="cs-nav-li">
-                <span class="cs-header">Sitemap</span>
-            </li>
-            <li class="cs-nav-li">
-                <a class="cs-nav-link" href="/">Home</a>
-            </li>
-            <li class="cs-nav-li">
-                <a class="cs-nav-link" href="/about">About</a>
-            </li>
-            <li class="cs-nav-li">
-                <a class="cs-nav-link" href="/services">Services</a>
-            </li>
-            <li class="cs-nav-li">
-                <a class="cs-nav-link" href="/portfolio">Portfolio</a>
-            </li>
-            <li class="cs-nav-li">
-                <a class="cs-nav-link" href="/contact">Contact</a>
-            </li>
-        </ul>
-        <!-- Contact Info -->
-        <ul class="cs-contact">
-            <li class="cs-nav-li">
-                <span class="cs-header">Contact</span>
-            </li>
-            <li class="cs-contact-li">
-                <a class="cs-contact-link" href="tel: 123-456-7890">(706) 905-6069</a>
-            </li>
-            <li class="cs-contact-li">
-                <a class="cs-contact-link" href="mailto:info@codestitch.com">bryan@bookstreetdesign.com</a>
-            </li>
-            <!-- Social Media 
-            <li class="cs-contact-li cs-social-group">
-                <div class="cs-social">
-                    <a class="cs-social-link" aria-label="visit google profile" href="">
-                        <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/google.svg" alt="google" width="11" height="11">
+        <div class="cs-bottom">
+            <!--Social-->
+            <ul class="cs-social">
+                <li class="cs-social-li">
+                    <a href="https://www.facebook.com/LodestarAugusta" class="cs-social-link" aria-label="facebook" target="_blank" rel="noopener">
+                        <img class="cs-social-icon cs-default" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/facebook-white.svg" alt="icon" loading="lazy" decoding="async" width="12" height="12" aria-hidden="true">
                     </a>
-                    <a class="cs-social-link" aria-label="visit facebook profile" href="">
-                        <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/Facebook.svg" alt="facebook" width="6" height="11">
+                </li>
+                <!--
+                <li class="cs-social-li">
+                    <a href="" class="cs-social-link" aria-label="twitter" target="_blank" rel="noopener">
+                        <img class="cs-social-icon cs-default" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/twitter-white.svg" alt="icon" loading="lazy" decoding="async" width="12" height="12" aria-hidden="true">
                     </a>
-                    <a class="cs-social-link" aria-label="visit instagram profile" href="">
-                        <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/instagram.svg" alt="instagram" width="11" height="11">
+                </li>
+                <li class="cs-social-li">
+                    <a href="" class="cs-social-link" aria-label="instagram" target="_blank" rel="noopener">
+                        <img class="cs-social-icon cs-default" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/instagram-transparent.svg" alt="icon" loading="lazy" decoding="async" width="12" height="12" aria-hidden="true">
                     </a>
-                </div>
-            </li>-->
-        </ul>
+                </li>
+                <li class="cs-social-li">
+                    <a href="" class="cs-social-link" aria-label="twitter" target="_blank" rel="noopener">
+                        <img class="cs-social-icon cs-default" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/youtube-transparent2.svg" alt="icon" loading="lazy" decoding="async" width="12" height="12" aria-hidden="true">
+                    </a>
+                </li>-->
+            </ul>
+            <span class="cs-copyright">
+                © Copyright 2025 - <a href="" class="cs-copyright-link">BookStreet Web Designs</a>
+            </span>
+        </div>
     </div>
+    <!--Background
+    <picture class="cs-background">
+        
+        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/kids2.jpg">
+        
+        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/kids2.jpg">
+        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/kids2.jpg" alt="kids" width="1280" height="568">
+    </picture>-->
 </footer>
+                                
                                 
