--- a/src/assets/less/contact.less
+++ b/src/assets/less/contact.less
@@ -97,8 +97,9 @@
             }
 
             .cs-button-solid {
-                border: none;
+                border: 4px solid #000;
                 width: 100%;
+                
             }
         }
 
