--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -9,7 +9,7 @@
 <section id="cta-697">
     <div class="cs-container">
         <div class="cs-content">
-            <h2 class="cs-title">Have any questions? Contact us and we'll get straight back to you!</h2>
+            <h2 class="cs-title">Have any questions? Wanting to enroll? Contact us today!</h2>
             <a href="/contact" class="cs-button-solid">Contact Us</a>
         </div>
     </div>
