--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -85,7 +85,7 @@
     font-family: inherit;
   }
   #cs-contact #cs-form .cs-button-solid {
-    border: none;
+    border: 4px solid #000;
     width: 100%;
   }
   #cs-contact .cs-right-section {
