--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -5,14 +5,15 @@
 /* CodeStitch Root and Helpers */
 @media only screen and (min-width: 0rem) {
   :root {
-    --primary: #457b9d;
-    --primaryLight: #f72e27;
-    --secondary: #212426;
-    --secondaryLight: #41474a;
-    --headerColor: #04090d;
+    --primary: #483d8b;
+    --primaryLight: #4682b4;
+    --secondary: #191970;
+    --secondaryLight: #a9ddd6;
+    --headerColor: #33312e;
     --bodyTextColor: #41474a;
     --bodyTextColorWhite: #e6e5ea;
-    --tertiary: #f72e27;
+    --tertiary: #192e6c;
+    --space: #6767a4;
     /* 13px - 16px */
     --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
     /* 31px - 49px */
@@ -64,7 +65,7 @@
     z-index: 1;
     position: relative;
     display: inline-block;
-    background-color: var(--primary);
+    background-color: var(--primaryLight);
     width: auto;
     padding: 0 1.875rem;
     text-decoration: none;
@@ -74,7 +75,7 @@
     font-weight: bold;
     border-radius: 1rem;
     border: 4px solid #000;
-    color: #000;
+    color: white;
     transition: color 0.3s;
     transition-delay: 0.1s;
     text-align: center;
@@ -86,15 +87,17 @@
     width: 100%;
   }
   .cs-button-solid:before {
-    z-index: -1;
+    content: '';
     position: absolute;
+    display: block;
+    height: 100%;
+    width: 0%;
+    background: var(--secondary);
+    opacity: 1;
     top: 0;
     left: 0;
-    content: "";
-    opacity: 1;
-    display: block;
-    background-color: #000;
-    height: 100%;
+    z-index: -1;
+    border-radius: 0.5rem;
     width: 0;
     transition: width 0.3s;
   }
@@ -118,7 +121,7 @@
     margin: 0;
     overflow-x: hidden;
     padding: 0;
-    font-family: "Roboto", Arial, sans-serif;
+    font-family: "Roboto", "Arial", sans-serif;
     font-size: 100%;
     color: var(--bodyTextColor);
   }
@@ -193,6 +196,15 @@
     font-weight: 900;
     font-display: swap;
     src: local(""), url("/assets/fonts/roboto-v29-latin-900.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/assets/fonts/roboto-v29-latin-900.woff") format("woff");
+    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* roboto-900 - latin */
+  @font-face {
+    font-family: "Pompiere";
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+    src: local(""), url("/assets/fonts/Pompiere-Regular.ttf") format("ttf"), /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/assets/fonts/Pompiere-Regular.ttf") format("ttf");
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 }
@@ -289,7 +301,8 @@
     box-sizing: border-box;
     padding: 0.75rem calc(16 / 16 * 1rem);
     /* remove the font family so the Stitch inherits the fonts from your global stylesheet */
-    font-family: "Roboto", "Arial", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-bottom: 4px solid #000;
   }
@@ -458,7 +471,7 @@
     /* 16px - 24px */
     font-size: clamp(1rem, 2.5vw, 1.5rem);
     line-height: 1.2em;
-    color: var(--headerColor);
+    color: var(--primary);
   }
   #cs-navigation .cs-li-link:before {
     position: absolute;
@@ -639,7 +652,7 @@
     visibility: hidden;
     opacity: 0;
     transform: scaleY(0);
-    border-bottom: 5px solid var(--primary);
+    border-bottom: 8px solid var(--primary);
     margin: 0;
     background-color: #fff;
     min-width: 12.5rem;
@@ -752,6 +765,7 @@
     padding: 0 1rem;
     /* remove the font family so the Stitch inherits the fonts from your global stylesheet */
     font-family: "Roboto", "Arial", sans-serif;
+    font-weight: 400;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-bottom: 4px solid #000;
   }
@@ -763,6 +777,53 @@
     max-width: 80rem;
     width: 100%;
     gap: 1.5rem;
+  }
+  #cs-navigation .cs-social {
+    height: 2rem;
+    opacity: 1;
+    background-color: #001f3f;
+    outline: none;
+    visibility: visible;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    transition: opacity 0.3s, visibility 0.3s, height 0.3s;
+  }
+  #cs-navigation .cs-social button,
+  #cs-navigation .cs-social button:focus {
+    outline: none;
+    background: transparent;
+    border: 1px solid transparent;
+  }
+  #cs-navigation .cs-social button:active {
+    outline: none;
+    background: transparent;
+    border: 1px solid grey;
+  }
+  #cs-navigation .cs-social-link {
+    text-decoration: none;
+    width: 2rem;
+    height: 2rem;
+    background-color: var(--primaryLight);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.3s;
+  }
+  #cs-navigation .cs-social-link:hover {
+    background-color: #1877F2;
+  }
+  #cs-navigation .cs-social-link:hover .cs-social-icon {
+    opacity: 1;
+    filter: grayscale(1) brightness(10000%);
+  }
+  #cs-navigation .cs-social-icon {
+    width: 0.75rem;
+    height: auto;
+    opacity: 0.6;
+    display: block;
+    transition: opacity 0.3s;
   }
   #cs-navigation .cs-toggle {
     display: none;
@@ -808,6 +869,7 @@
     text-decoration: none;
     /* 14px - 16px */
     font-size: clamp(0.875rem, 1vw, 1rem);
+    font-weight: 400;
     line-height: 1.5em;
     color: var(--bodyTextColor);
   }
@@ -823,7 +885,7 @@
     opacity: 1;
     display: block;
     background: var(--primary);
-    height: 2px;
+    height: 4px;
     width: 0%;
     transition: width 0.3s;
   }
@@ -858,6 +920,7 @@
     padding-top: clamp(12.5rem, 31.95vw, 18.75rem);
     position: relative;
     z-index: 1;
+    border-top: 4px solid #000;
   }
   #hero-1619 .cs-container {
     width: 100%;
@@ -889,7 +952,7 @@
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 0.25rem;
-    color: var(--primaryLight);
+    color: var(--secondaryLight);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -897,7 +960,7 @@
     position: relative;
   }
   #hero-1619 .cs-chevron {
-    --chevronColor: var(--primaryLight);
+    --chevronColor: var(--secondaryLight);
     width: 3rem;
     height: auto;
   }
@@ -908,7 +971,7 @@
     line-height: 1.2em;
     text-align: inherit;
     max-width: 100%;
-    margin: 0 0 2.5rem 0;
+    margin: 0 0 0.25rem 0;
     color: #fff;
     position: relative;
   }
@@ -932,7 +995,8 @@
     margin: 0;
     color: #fff;
     padding: 0 1.5rem;
-    background-color: var(--primary);
+    margin: 1.5rem 0 0 0;
+    background-color: var(--primaryLight);
     display: inline-block;
     position: relative;
     z-index: 1;
@@ -943,11 +1007,13 @@
     display: block;
     height: 100%;
     width: 0%;
-    background: #000;
+    background: var(--secondary);
     opacity: 1;
     top: 0;
     left: 0;
     z-index: -1;
+    border-radius: 0.5rem;
+    width: 0;
     transition: width 0.3s;
   }
   #hero-1619 .cs-button-solid:hover:before {
@@ -969,7 +1035,7 @@
     margin: 0;
     /* 24px - 32px */
     padding: clamp(1.5rem, 3vw, 2rem);
-    background-color: var(--primary);
+    background-color: var(--secondaryLight);
     box-shadow: 0px 12px 80px 0px rgba(26, 26, 26, 0.08);
     /* prevents padding from affecting height and width */
     box-sizing: border-box;
@@ -988,7 +1054,7 @@
     width: 3rem;
     height: auto;
     margin: 0 0 1.5rem 0;
-    filter: invert(94%) sepia(48%) saturate(7347%) hue-rotate(180deg) brightness(113%) contrast(83%);
+    filter: invert(14%) sepia(9%) saturate(469%) hue-rotate(357deg) brightness(93%) contrast(83%);
   }
   #hero-1619 .cs-h3 {
     /* 20px - 25px */
@@ -997,7 +1063,7 @@
     font-weight: bold;
     text-align: inherit;
     margin: 0 0 1rem 0;
-    color: var(--headerColor);
+    color: var(--primary);
   }
   #hero-1619 .cs-item-text {
     /* 14px - 16px */
@@ -1006,7 +1072,7 @@
     max-width: 28.125rem;
     margin: 0;
     padding: 0;
-    color: var(--bodyTextColorWhite);
+    color: var(--bodyTextColor);
   }
   #hero-1619 .cs-background {
     width: 100%;
@@ -1064,7 +1130,7 @@
     height: 87%;
   }
   #hero-1619 .cs-background:before {
-    background: linear-gradient(90deg, var(--secondaryLight) 21.41%, rgba(17, 25, 38, 0.72) 34.98%, rgba(17, 25, 38, 0) 62.53%);
+    background: linear-gradient(90deg, var(--space) 21.41%, rgba(17, 25, 38, 0.72) 34.98%, rgba(17, 25, 38, 0) 62.53%);
     opacity: 1;
   }
 }
@@ -1077,7 +1143,7 @@
 /* Large Desktop Parallax Effect - 100px */
 @media only screen and (min-width: 100rem) {
   #hero-1619 .cs-background {
-    background: url("/assets/images/Webdesign_1.jpg");
+    background: url("/assets/images/background1.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -1157,7 +1223,7 @@
     color: var(--bodyTextColorWhite);
     min-width: 9.375rem;
     padding: 0 1.5rem;
-    background-color: var(--secondary);
+    background-color: var(--primaryLight);
     border-radius: 1rem;
     display: inline-block;
     position: relative;
@@ -1166,16 +1232,18 @@
     box-sizing: border-box;
   }
   #cta-697 .cs-button-solid:before {
-    content: "";
+    content: '';
     position: absolute;
+    display: block;
     height: 100%;
     width: 0%;
-    background: #000;
+    background: var(--secondary);
     opacity: 1;
     top: 0;
     left: 0;
     z-index: -1;
-    border-radius: 0.25rem;
+    border-radius: 0.5rem;
+    width: 0;
     transition: width 0.3s;
   }
   #cta-697 .cs-button-solid:hover:before {
@@ -1212,177 +1280,168 @@
 <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #cs-footer-269 {
-    /* 60px - 100px top and bottom */
-    padding: clamp(3.75rem, 7.82vw, 6.25rem) 1rem;
-    background-color: var(--secondary);
+  #footer-1147 {
+    padding: var(--sectionPadding);
+    position: relative;
+    z-index: 1;
+    background-color: var(--primaryLight);
     border-top: 4px solid #000;
-    /* Navigation Links */
-    /* Contact Links */
   }
-  #cs-footer-269 .cs-container {
+  #footer-1147 .cs-container {
     width: 100%;
-    /* reset on tablet */
-    max-width: 34.375rem;
+    max-width: 80rem;
     margin: auto;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    /* 68px - 100px */
-    column-gap: clamp(4.25rem, calc(8% + 2vw), 6.25rem);
+    flex-direction: column;
+    align-items: center;
   }
-  #cs-footer-269 .cs-logo-group {
-    /* takes up all the space, lets the other ul's wrap below it */
+  #footer-1147 .cs-top {
     width: 100%;
-    position: relative;
-  }
-  #cs-footer-269 .cs-logo {
-    /* 210px - 240px */
-    width: clamp(13.125rem, 8vw, 15rem);
-    height: auto;
-    display: block;
-    /* 28px - 44px */
-    margin-bottom: clamp(1.75rem, 4.17vw, 2.75rem);
-  }
-  #cs-footer-269 .cs-logo-img {
-    width: 100%;
-    height: auto;
-  }
-  #cs-footer-269 .cs-nav {
-    padding: 0;
-    margin: 0;
-  }
-  #cs-footer-269 .cs-nav-li {
-    list-style: none;
-    line-height: 1.5em;
-    margin-bottom: 0.5rem;
-  }
-  #cs-footer-269 .cs-nav-li:last-of-type {
-    margin-bottom: 0;
-  }
-  #cs-footer-269 .cs-header {
-    font-size: 1rem;
-    line-height: 1.5em;
-    font-weight: 700;
-    margin-bottom: 0.875rem;
-    color: var(--bodyTextColorWhite);
-    position: relative;
-    display: block;
-  }
-  #cs-footer-269 .cs-nav-link {
-    font-size: 1rem;
-    text-decoration: none;
-    line-height: 1.5em;
-    color: var(--bodyTextColorWhite);
-    position: relative;
-  }
-  #cs-footer-269 .cs-nav-link:before {
-    /* underline */
-    content: "";
-    width: 0%;
-    height: 0.125rem;
-    background: var(--primary);
-    /* current color of the parent */
-    opacity: 1;
-    position: absolute;
-    display: block;
-    bottom: -0.125rem;
-    left: 0;
-    transition: width 0.3s;
-  }
-  #cs-footer-269 .cs-nav-link:hover:before {
-    width: 100%;
-  }
-  #cs-footer-269 .cs-contact {
-    margin: 0;
-    padding: 0;
-    width: auto;
+    /* 32px - 40px */
+    margin-bottom: clamp(2rem, 4vw, 2.5rem);
+    padding-bottom: clamp(2rem, 4vw, 2.5rem);
+    border-bottom: 4px solid var(--secondary);
     display: flex;
     flex-direction: column;
-    align-self: stretch;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
   }
-  #cs-footer-269 .cs-contact-li {
+  #footer-1147 .cs-ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    row-gap: 0.5rem;
+    /* 28px - 40px */
+    column-gap: clamp(1.75rem, 4vw, 2.5rem);
+  }
+  #footer-1147 .cs-li {
     list-style: none;
-    margin-bottom: 0rem;
   }
-  #cs-footer-269 .cs-contact-li:last-of-type {
-    margin-bottom: 0;
-  }
-  #cs-footer-269 .cs-contact-link {
-    font-size: 1rem;
-    text-decoration: none;
+  #footer-1147 .cs-link {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 1.5vw, 1rem);
     line-height: 1.5em;
-    text-align: left;
-    color: var(--bodyTextColorWhite);
-    display: inline-block;
+    text-decoration: none;
+    margin: 0;
+    color: #bababa;
+    display: block;
+    transition: color 0.3s;
   }
-  #cs-footer-269 .cs-contact-link:hover {
-    text-decoration: underline;
-    color: var(--primary);
+  #footer-1147 .cs-link:hover {
+    color: var(--secondary);
   }
-  #cs-footer-269 .cs-address {
-    font-size: 1rem;
-    margin-bottom: 1.25rem;
+  #footer-1147 .cs-logo {
+    width: 10.5rem;
+    height: auto;
+    display: block;
   }
-  #cs-footer-269 .cs-social-group {
-    /* pushes away from the other flex items */
-    margin-top: auto;
-    margin-left: auto;
+  #footer-1147 .cs-logo-img {
+    width: 100%;
+    height: auto;
+    display: block;
   }
-  #cs-footer-269 .cs-social {
-    display: inline-flex;
-    justify-content: flex-start;
-    gap: 0.75rem;
+  #footer-1147 .cs-bottom {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
   }
-  #cs-footer-269 .cs-social-link {
-    width: 1.5rem;
-    height: 1.5rem;
-    background-color: #4e4b66;
+  #footer-1147 .cs-social {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  #footer-1147 .cs-social-li {
+    list-style: none;
+  }
+  #footer-1147 .cs-social-link {
+    width: 2rem;
+    height: 2rem;
+    background-color: #484848;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    z-index: 1;
-    transition: transform 0.3s, background-color 0.3s;
+    transition: background-color 0.3s;
   }
-  #cs-footer-269 .cs-social-link:hover {
-    background-color: var(--primary);
-    transform: translateY(-0.1875rem);
+  #footer-1147 .cs-social-link:hover {
+    background-color: var(--secondary);
   }
-  #cs-footer-269 .cs-social-img {
-    height: 0.8125rem;
-    width: auto;
+  #footer-1147 .cs-social-link:hover .cs-social-icon {
+    filter: grayscale(1) brightness(0);
+    opacity: 1;
+  }
+  #footer-1147 .cs-social-icon {
+    width: 0.75rem;
+    height: auto;
     display: block;
+    opacity: 0.5;
+  }
+  #footer-1147 .cs-copyright {
+    font-size: 1rem;
+    line-height: 1.5em;
+    margin: 0;
+    color: #bababa;
+    display: block;
+  }
+  #footer-1147 .cs-copyright-link {
+    font-size: inherit;
+    text-decoration: none;
+    color: inherit;
+    transition: color 0.3s;
+  }
+  #footer-1147 .cs-copyright-link:hover {
+    color: var(--secondary);
+  }
+  #footer-1147 .cs-background {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #footer-1147 .cs-background:before {
+    /* background color overlay */
+    content: "";
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background: #1a1a1a;
+    opacity: 0.96;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  #footer-1147 .cs-background img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /* Makes img tag act as a background image */
+    object-fit: cover;
   }
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-  #cs-footer-269 .cs-container {
-    max-width: 80rem;
-    row-gap: 0;
+  #footer-1147 .cs-top {
+    flex-direction: row;
+    justify-content: space-between;
   }
-  #cs-footer-269 .cs-logo-group {
-    width: auto;
-    /* pushes everything to the right of it as far as possible in a flexbox */
-    margin-right: auto;
-  }
-  #cs-footer-269 .cs-text-2 {
-    width: 80%;
-    max-width: 19.0625rem;
-    margin: 0;
-  }
-  #cs-footer-269 .cs-nav,
-  #cs-footer-269 .cs-contact {
-    /* 8px - 12px */
-    margin-top: clamp(0.5rem, 1.2vw, 0.75rem);
-  }
-}
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-  body.dark-mode #cs-footer-269 {
-    background-color: var(--secondary);
+  #footer-1147 .cs-bottom {
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 /*-- -------------------------- -->
