--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -1,432 +1,284 @@
 /* PAGE-SPECIFIC STYLES FOR THE ABOUT PAGE */
 
 /*-- -------------------------- -->
-<---          Reviews           -->
+<---          Services          -->
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #reviews-442 {
-        box-sizing: border-box;
-        /* prevents overflow from grey box */
-        overflow: hidden;
-        position: relative;
-
-        &:before {
-            /* grey box */
-            content: "";
-            width: 100%;
-            height: 40%;
-            background: #fafbfc;
-            border-top: 1px solid #b4b2c7;
-            opacity: 1;
-            position: absolute;
-            display: block;
-            /* overlap a but to cover seams between sections */
-            bottom: (-2/16rem);
-            left: 0;
-        }
-
-        .cs-wrapper {
-            /* change width to make sure there is 16px gap left and right */
-            width: 91.112%;
-            /* changes at tablet */
-            max-width: (550/16rem);
-            /* using margin instead of padding so the green bar can rest at the true bottom of the section, without padding interrupting it */
-            margin: var(--sectionPadding);
-            margin-bottom: 0;
-            margin-left: auto;
-            margin-right: auto;
-            box-sizing: border-box;
-            border-radius: (24/16rem);
-            /* clips corners of green border */
-            overflow: hidden;
-            position: relative;
-
-            &:after {
-                /* green bar */
-                content: "";
-                width: 100%;
-                height: (8/16rem);
-                background: var(--primaryLight);
-                opacity: 1;
-                position: absolute;
-                display: block;
-                bottom: 0;
-                left: 0;
-                z-index: 10;
-            }
-        }
-
-        .cs-container {
-            width: 100%;
-            margin: auto;
-            /* pushes down the same amount as the picture is pulled up */
-            margin-top: (93/16rem);
-            /* 20px - 108px left & right, clamp changes at desktop */
-            /* 48px - 100px bottom */
-            padding: 0 clamp(1.25rem, 6vw, 6.75rem) clamp(2.5rem, 8vw, 6.25rem);
-            border-radius: (24/16rem);
-            /* prevents padding and border from affecting height and width */
-            box-sizing: border-box;
-            background-color: #14142b;
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            flex-direction: column;
-            position: relative;
-        }
-
-        .cs-review {
-            /* 16px - 25px */
-            font-size: clamp(1rem, 2vw, 1.5625rem);
-            line-height: 1.5em;
-            /* 24px - 48px changes at tablet */
-            margin: 0 0 clamp(1.5rem, 3vw, 3rem) 0;
-            color: #dad9e3;
-            position: relative;
-            z-index: 1;
-        }
-
-        .cs-quote {
-            /* 40px - 120px , clamp changes at tablet */
-            width: clamp(2.5rem, 11vw, 7.5rem);
-            height: auto;
-            display: block;
-            position: absolute;
-            left: 0;
-            /* changes at tablet */
-            top: (-60/16rem);
-            z-index: -1;
-        }
-        
-
-        .cs-author {
-            /* 16px - 31px */
-            font-size: clamp(1rem, 2.6vw, 1.9375rem);
-            font-weight: 700;
-            line-height: 1.2em;
-            color: #fafbfc;
-        }
-
-        .cs-picture {
-            /* 116px - 328px */
-            width: clamp(7.25rem, 24vw, 20.5rem);
-            margin-top: (-93/16rem);
-            margin-bottom: (36/16rem);
-            border-radius: (140/16rem);
-            border: clamp(8px, 1vw, 12px) solid #fff;
-            background-color: #fff;
-            box-sizing: content-box;
-            /* clips the img tag corners */
-            overflow: hidden;
-            /* width divided by height */
-            aspect-ratio: 328/504;
-            display: block;
-            /* sends it to the top of the flexbox */
-            order: -1;
-            position: relative;
-
-            img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                height: 100%;
-                width: 100%;
-                /* makes it act like a background image */
-                object-fit: cover;
-                /* makes the top of the image line up at the top of the container */
-                object-position: top;
-            }
-        }
-    }
-}
-
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-    #reviews-442 {
-        .cs-wrapper {
-            max-width: (1280/16rem);
-        }
-        .cs-container {
-            padding-top: (108/16rem);
-            flex-direction: row;
-            justify-content: space-between;
-        }
-
-        .cs-content {
-            width: 57%;
-        }
-
-        .cs-review {
-            /* 48px - 96px, clamp changes at desktop */
-            margin-bottom: clamp(3rem, 7vw, 6rem);
-        }
-
-        .cs-quote {
-            /* 80px - 120px , clamp changes at tablet */
-            width: clamp(5rem, 8vw, 7.5rem);
-            top: (-53/16rem);
-            /* 20px - 64px */
-            left: ~"calc(clamp(1.25rem, 2vw, 4rem) *-1)";
-        }
-
-        .cs-picture {
-            margin: 0;
-            /* reset its order */
-            order: initial;
-            position: absolute;
-            /* 50px - 108px - wrapped in calc function turn multiple value by negative 1 and get a negative clamp value*/
-            top: ~"calc(clamp(3.125rem, 8vw, 6.75rem) *-1)";
-            /* 52px - 100px */
-            right: clamp(3.25rem, 7vw, 6.25rem);
-        }
-    }
-}
-
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-    #reviews-442 {
-        .cs-container {
-            /* 60px - 108px left & right */
-            /* 48px - 100px bottom */
-            padding: (108/16rem) ~"clamp(3.75rem, 4.6vw + 2rem, 6.75rem) clamp(2.5rem, 8vw, 6.25rem)";
-        }
-
-        .cs-review {
-            /* 48px - 96px changes at tablet */
-            margin: ~"0 0 clamp(3rem, 4.2vw + 2rem, 6rem) 0";
-        }
-    }
-}
-
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-    body.dark-mode {
-        #reviews-442 {
-            &:before {
-                background-color: rgba(0, 0, 0, 0.2);
-            }
-            .cs-container {
-                background-color: var(--dark);
-                border: 1px solid #b4b2c7;
-            }
-            .cs-quote {
-                filter: grayscale(1) brightness(200%);
-                opacity: 0.3;
-            }
-            .cs-picture {
-                border-color: var(--dark);
-                background-color: var(--dark);
-            }
-        }
-    }
-}
-
-/*-- -------------------------- -->
-<---         Why Choose         -->
-<--- -------------------------- -*/
-
-/* Mobile - 360px */
-@media only screen and (min-width: 0em) {
-    #why-choose-442 {
+    #services-1498 {
         padding: var(--sectionPadding);
-        background-color: #fafbfc;
+        position: relative;
+        z-index: 1;
+        background-color: var(--secondaryLight);
+        overflow: hidden;
 
         .cs-container {
             width: 100%;
-            /* changes to 1280px at tablet */
-            max-width: (550/16rem);
+            /* changes to 1280px at desktop */
+            max-width: (900 / 16rem);
             margin: auto;
             display: flex;
             flex-direction: column;
             align-items: center;
             /* 48px - 64px */
             gap: clamp(3rem, 6vw, 4rem);
+            position: relative;
+            z-index: 15;
         }
 
         .cs-content {
-            /* set text align to left if content needs to be left aligned */
-            text-align: center;
-            width: 100%;
             display: flex;
             flex-direction: column;
             /* centers content horizontally, set to flex-start to left align */
             align-items: center;
+            width: 100%;
+            /* set text align to left if content needs to be left aligned */
+            text-align: center;
+        }
+
+        .cs-title {
+            max-width: 30ch;
         }
 
         .cs-card-group {
-            width: 100%;
             margin: 0;
+            width: 100%;
             padding: 0;
             display: flex;
-            justify-content: center;
             align-items: center;
-            flex-wrap: wrap;
-            /* 12px - 20px */
-            gap: clamp(0.75rem, 1.5vw, 1.25rem);
+            flex-direction: column;
+            /* 16px - 20px */
+            gap: clamp(1rem, 2vw, 1.25rem);
         }
 
         .cs-item {
+            text-align: center;
             list-style: none;
-            width: 48%;
-            /* changes on tablet */
-            max-width: (462/16rem);
-            /* 24px - 40px top & bottom */
-            /* 24px - 40px left & right */
-            padding: clamp(1.5rem, 3vw, 2.5rem) clamp(1.25rem, 3vw, 2.5rem);
-            border-radius: (16/16rem);
-            background-color: #fff;
-            border: 1px solid #dad9e3;
-            box-shadow: 0px 24px 54px rgba(87, 107, 147, 0.12);
+            max-width: (480/16rem);
+            height: (650/16rem);
+            /* 16px - 24px */
+            padding: (24/16rem) clamp(1rem, 2.4vw, 1.5rem);
+            /* prevents padding from affecting height and width */
             box-sizing: border-box;
+            background-color: #fff;
+            border: 4px solid #E8E8E8;
+            /* 40px - 60px */
+            border-radius: clamp(2.5rem, 5vw, 3.75rem);
             display: flex;
-            justify-content: center;
-            align-items: center;
             flex-direction: column;
+            align-items: center;
             position: relative;
-            transition:
-                background-color 0.3s,
-                transform 0.3s,
-                box-shadow 0.3s,
-                border 0.3s;
-
-            &:before {
-                /* green border on hover */
-                content: "";
-                width: 100%;
-                height: 100%;
-                background: transparent;
-                border: 4px solid var(--primary);
-                border-radius: (12/16rem);
-                /* prevents border from affecting height and width */
-                box-sizing: border-box;
-                /* prevents the mouse from interacting with it */
-                pointer-events: none;
-                opacity: 0;
-                position: absolute;
-                display: block;
-                top: 0;
-                left: 0;
-                transition: opacity 0.3s;
-            }
+            z-index: 1;
+            transition: border-color .3s;
 
             &:hover {
-                background-color: #fff;
-                transform: translateY(-0.4375rem);
-                border-color: var(--primary);
-                &:before {
-                    opacity: 1;
+                border-color: var(--secondary);
+
+                .cs-picture {
+                    img {
+                        transform: scale(1.2);
+                    }
                 }
-            }
-            .cs-h3 {
-                /* 20px - 25px */
-                
-                line-height: 1.5em;
-                margin: 0;
-                margin-bottom: (16/16rem);
-                color: var(--primary);
-                transition: color 0.3s;
-                font-weight: bold;
+
+                .cs-h3,
+                .cs-link {
+                    color: var(--primary);
+                }
+
+                .cs-arrow {
+                    filter: initial;
+                }
             }
         }
 
-        .cs-picture {
-            /* 40px - 72px */
-            width: clamp(2.5rem, 6.5vw, 4.5rem);
-            /* 40px - 72px */
-            height: clamp(2.5rem, 6.5vw, 4.5rem);
-            margin: 0;
-            margin-bottom: (24/16rem);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50%;
-            background-color: var(--primary);
+        .cs-image-group {
+            /* done in ems so we can use font size to scale it on desktop */
+            width: (350/16em);
+            height: (270/16em);
+            /* 16px - 24px */
+            margin: 0 0 clamp(1rem, 2.4vw, 1.5rem);
             position: relative;
             z-index: 1;
         }
 
-        .cs-icon {
-            /* 24px - 32px */
-            height: clamp(1.5rem, 2vw, 2rem);
-            width: auto;
-            filter: invert(94%) sepia(48%) saturate(7347%) hue-rotate(180deg) brightness(113%) contrast(83%);
+        .cs-picture {
+            position: relative;
+            display: block;
+            width: 100%;
+            height: 100%;
+            /* clips the image from overflowing parent on hover */
+            overflow: hidden;
+
+            img {
+                z-index: -1;
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                transition: transform 0.65s;
+            }
         }
 
-        .cs-number {
-            font-size: var(--bodyFontSize);
-            font-weight: 400;
-            text-align: center;
-            line-height: 1.2em;
-            margin: 0;
-            margin-bottom: (4/16rem);
+        .cs-mask {
+            /* SVG Colors */
+            --maskBorder: #e8e8e8;
+            --maskBG: #fff;
+
+            position: absolute;
+            top: -1px;
+            left: -1px;
+            bottom: -1px;
+            right: -1px;
+        }
+
+        .cs-info {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .cs-h3 {
+            /* 20px - 25px */
+            font-size: clamp(1.25rem, 2.5vw, 1.5625rem);
+            text-align: inherit;
+            line-height: 1.5em;
+            font-weight: 700;
+            width: 100%;
+            margin: 0 0 (8/16rem) 0;
+            /* prevents padding and border from affecting height and width */
+            box-sizing: border-box;
             color: var(--headerColor);
+            transition: background-color 0.3s;
             transition: color 0.3s;
+        }
+
+        .cs-ages {
+            font-size: (16/16rem);
+            line-height: 1.2em;
+            text-align: inherit;
+            font-weight: 700;
+            margin: 0 0 (16/16rem) 0;
+            color: var(--secondary);
         }
 
         .cs-item-text {
-            /* 14px - 20px */
-            font-size: clamp(.875rem, 1.5vw, 1rem);
-            text-align: center;
+            /* 14px - 16px */
+            font-size: clamp(0.875rem, 1.5vw, 1rem);
+            text-align: inherit;
             line-height: 1.5em;
-            margin: 0;
+            max-width: 50ch;
+            /* 16px - 24px */
+            margin: 0 0 clamp(1rem, 2.4vw, 1.5rem);
+            width: 100%;
             color: var(--bodyTextColor);
+        }
+
+        .cs-link {
+            font-size: (16/16rem);
+            text-decoration: none;
+            text-align: inherit;
+            line-height: 1.2em;
+            font-weight: 700;
+            color: var(--primary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
             transition: color 0.3s;
+
+            &:hover {
+                .cs-arrow {
+                    transform: translateX(0.25rem);
+                }
+            }
+        }
+
+        .cs-arrow {
+            display: block;
+            height: auto;
+            width: (20/16rem);
+            transition:
+                filter 0.3s,
+                transform 0.3s;
+        }
+
+        .cs-hills {
+            /* hills Color */
+            --hillBG: var(--secondary);
+
+            width: 150%;
+            min-width: (1920/16rem);
+            height: 900px;
+            position: absolute;
+            /* positions off the top at tablet */
+            bottom: (-100/16rem);
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .cs-wrapper {
+            width: 140vw;
+            max-width: (1462/16rem);
+            height: 70%;
+            display: none;
+            position: absolute;
+            /* 60px - 100px (same as the padding bottom of the section ) */
+            bottom: clamp(3.75rem, 7.82vw, 6.25rem);
+            left: 50%;
+            z-index: 2;
+            transform: translateX(-50%);
+        }
+
+        .cs-floater {
+            position: absolute;
+        }
+
+        .cs-floater1 {
+            left: 0;
+            top: (-220/16rem);
+        }
+
+        .cs-floater2 {
+            bottom: (-50/16rem);
+            right: 0;
         }
     }
 }
 
 /* Tablet - 768px */
-@media only screen and (min-width: 48em) {
-    #why-choose-442 {
+@media only screen and (min-width: 48rem) {
+    #services-1498 {
         .cs-container {
             max-width: (1280/16rem);
         }
 
         .cs-card-group {
-            flex-direction: row;
+            display: grid;
+            grid-template-columns: auto auto;
             justify-content: center;
-            flex-wrap: nowrap;
-            column-gap: (20/16rem);
+            //flex-wrap: wrap;
         }
 
         .cs-item {
             width: 100%;
-            max-width: (413/16rem);
+        }
+
+        .cs-image-group {
+            /* scaling it down so it all fits proportionally */
+            font-size:~"min(1.2vw, 1em)";
+        }
+
+        .cs-wrapper {
+            display: block;
+        }
+
+        .cs-hills {
+            top: 65%;
+            bottom: auto;
         }
     }
 }
-
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-    body.dark-mode {
-        #why-choose-442 {
-            background-color: rgba(0, 0, 0, 0.2);
-
-            .cs-topper {
-                color: var(--primaryLight);
-            }
-            .cs-title,
-            .cs-text,
-            .cs-item-text,
-            .cs-number {
-                color: var(--bodyTextColorWhite);
-            }
-            .cs-h3{
-                color: var(--tertiary);
-            }
-
-            .cs-picture {
-                background-color: var(--primary);
-            }
-
-            .cs-item {
-                position: relative;
-                background-color: transparent;
-            }
-        }
-    }
-}
-
                                 
+
+ 
