--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -5,15 +5,20 @@
 /* CodeStitch Root and Helpers */
 @media only screen and (min-width: 0rem) {
   :root {
-    --primary: #483d8b;
-    --primaryLight: #4682b4;
-    --secondary: #191970;
-    --secondaryLight: #a9ddd6;
-    --headerColor: #33312e;
+    --primary: #004aad;
+    --primaryLight: #29abe2;
+    --secondary: #f68712;
+    --secondaryLight: #ffd815;
+    --headerColor: #323031;
     --bodyTextColor: #41474a;
     --bodyTextColorWhite: #e6e5ea;
-    --tertiary: #192e6c;
+    --tertiary: #483d8b;
     --space: #6767a4;
+    --picton-blue: #bfe6f6;
+    --tangerine: #fde7d0;
+    --school-bus-yellow: #fff3b9;
+    --cobalt-blue: #ccdbef;
+    --jet: #323031ff;
     /* 13px - 16px */
     --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
     /* 31px - 49px */
@@ -1035,7 +1040,7 @@
     margin: 0;
     /* 24px - 32px */
     padding: clamp(1.5rem, 3vw, 2rem);
-    background-color: var(--secondaryLight);
+    background-color: var(--primary);
     box-shadow: 0px 12px 80px 0px rgba(26, 26, 26, 0.08);
     /* prevents padding from affecting height and width */
     box-sizing: border-box;
@@ -1054,7 +1059,7 @@
     width: 3rem;
     height: auto;
     margin: 0 0 1.5rem 0;
-    filter: invert(14%) sepia(9%) saturate(469%) hue-rotate(357deg) brightness(93%) contrast(83%);
+    filter: invert(63%) sepia(84%) saturate(2277%) hue-rotate(165deg) brightness(94%) contrast(88%);
   }
   #hero-1619 .cs-h3 {
     /* 20px - 25px */
@@ -1063,7 +1068,7 @@
     font-weight: bold;
     text-align: inherit;
     margin: 0 0 1rem 0;
-    color: var(--primary);
+    color: var(--secondaryLight);
   }
   #hero-1619 .cs-item-text {
     /* 14px - 16px */
@@ -1072,7 +1077,7 @@
     max-width: 28.125rem;
     margin: 0;
     padding: 0;
-    color: var(--bodyTextColor);
+    color: var(--bodyTextColorWhite);
   }
   #hero-1619 .cs-background {
     width: 100%;
@@ -1300,7 +1305,7 @@
     /* 32px - 40px */
     margin-bottom: clamp(2rem, 4vw, 2.5rem);
     padding-bottom: clamp(2rem, 4vw, 2.5rem);
-    border-bottom: 4px solid var(--secondary);
+    border-bottom: 4px solid var(--jet);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1327,7 +1332,7 @@
     line-height: 1.5em;
     text-decoration: none;
     margin: 0;
-    color: #bababa;
+    color: var(--headerColor);
     display: block;
     transition: color 0.3s;
   }
@@ -1373,7 +1378,7 @@
     transition: background-color 0.3s;
   }
   #footer-1147 .cs-social-link:hover {
-    background-color: var(--secondary);
+    background-color: var(--primary);
   }
   #footer-1147 .cs-social-link:hover .cs-social-icon {
     filter: grayscale(1) brightness(0);
@@ -1389,7 +1394,7 @@
     font-size: 1rem;
     line-height: 1.5em;
     margin: 0;
-    color: #bababa;
+    color: var(--headerColor);
     display: block;
   }
   #footer-1147 .cs-copyright-link {
