--- a/src/assets/less/services.less
+++ b/src/assets/less/services.less
@@ -10,7 +10,7 @@
         padding: var(--sectionPadding);
         position: relative;
         z-index: 1;
-        background-color: var(--secondaryLight);
+        background-color: var(--school-bus-yellow);
         overflow: hidden;
 
         .cs-container {
@@ -207,7 +207,7 @@
 
         .cs-hills {
             /* hills Color */
-            --hillBG: #F2FAF8;
+            --hillBG: var(--secondary);
 
             width: 150%;
             min-width: (1920/16rem);
