--- a/src/assets/css/services.css
+++ b/src/assets/css/services.css
@@ -8,7 +8,7 @@
     padding: var(--sectionPadding);
     position: relative;
     z-index: 1;
-    background-color: var(--secondaryLight);
+    background-color: var(--school-bus-yellow);
     overflow: hidden;
   }
   #services-1498 .cs-container {
@@ -178,7 +178,7 @@
   }
   #services-1498 .cs-hills {
     /* hills Color */
-    --hillBG: #F2FAF8;
+    --hillBG: var(--secondary);
     width: 150%;
     min-width: 120rem;
     height: auto;
