--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -10,7 +10,7 @@
         padding: var(--sectionPadding);
         position: relative;
         z-index: 1;
-        background-color: var(--secondaryLight);
+        background-color: var(--school-bus-yellow);
         overflow: hidden;
 
         .cs-container {
